--- a/Calculadora.ipynb
+++ b/Calculadora.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP8uE9QKgoUulokKAt/0YzQ",
+      "authorship_tag": "ABX9TyPFNzyaTR2rHqQhtmfOuWPb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Pankuki21/Calculadora/blob/main/Calculadora.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Pankuki21/Calculadora/blob/Suma-3-valores/Calculadora.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -36,6 +36,8 @@
       "source": [
         "num1 = int(input(\"numero 1: \"))\n",
         "num2 = int(input(\"numero 2: \"))\n",
+        "num3 = int(input(\"numero 3: \"))\n",
+        "\n",
         "\n",
         "valor = 0\n",
         "while True:\n",
@@ -49,13 +51,13 @@
         "    valor = int(input(\"Elige una opcion: \") )\n",
         "\n",
         "    if valor == 1:\n",
-        "        print(\"la suma es\",num1+num2)\n",
+        "        print(\"la suma es\",num1+num2+num3)\n",
         "        break;\n",
         "    if valor == 2:\n",
-        "        print(\"la resta es\",num1-num2)\n",
+        "        print(\"la resta es\",num1-num2-num3)\n",
         "        break;\n",
         "    if valor == 3:\n",
-        "        print(\"la multiplicacion es\",num1*num2)\n",
+        "        print(\"la multiplicacion es\",num1*num2*num3)\n",
         "        break;\n",
         "    if valor == 4:\n",
         "        print(\"la division es\",num1/num2)\n",
